@@ -3117,6 +3117,7 @@ TLV_USESSI = 0x004A
 CAP_ICON = '\x09\x46\x13\x46\x4C\x7F\x11\xD1\x82\x22\x44\x45\x53\x54\x00\x00'
 # User is using iChat
 CAP_ICHAT = '\x09\x46\x00\x00\x4C\x7F\x11\xD1\x82\x22\x44\x45\x53\x54\x00\x00'
+# ... and has audio-video support
 CAP_ICHATAV = '\x09\x46\x01\x05\x4C\x7F\x11\xD1\x82\x22\x44\x45\x45\x53\x54\x00'
 # Supports voice chat
 CAP_VOICE = '\x09\x46\x13\x41\x4C\x7F\x11\xD1\x82\x22\x44\x45\x53\x54\x00\x00'
@@ -3140,7 +3141,54 @@ CAP_CROSS_CHAT = '\x09\x46\x13\x4D\x4C\x7F\x11\xD1\x82\x22\x44\x45\x53\x54\x00\x
 CAP_UTF = '\x09\x46\x13\x4E\x4C\x7F\x11\xD1\x82\x22\x44\x45\x53\x54\x00\x00'
 # Supports RTF messages
 CAP_RTF = '\x97\xB1\x27\x51\x24\x3C\x43\x34\xAD\x22\xD6\xAB\xF7\x3F\x14\x92'
+# Is Apple iChat (probably indicates that it supports iChat features)
+CAP_ICHAT = '\x09\x46\x00\x00\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Supports some sort of secure instant messaging. (not trillian)
+CAP_SECUREIM = '\x09\x46\x00\x01\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Supports video chat? (other caps seem to indicate this as well)
+CAP_VIDEO = '\x09\x46\x01\x00\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# "Live Video" support in Windows AIM 5.5.3501 and newer
+CAP_LIVE_VIDEO = '\x09\x46\x01\x01\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# "Camera" support in Windows AIM 5.5.3501 and newer
+CAP_CAMERA = '\x09\x46\x01\x02\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Not really sure about this one.  In an email from 26 Sep 2003,
+# Matthew Sachs suggested that, "this * is probably the capability
+# for the SMS features."
+CAP_SMS = '\x09\x46\x01\xff\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# In Windows AIM 5.5.3501 and newer
+CAP_GENERICUNKNOWN1 = '\x09\x46\x01\x03\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Total unknowns
+CAP_GENERICUNKNOWN2 = '\x09\x46\xf0\x03\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+CAP_GENERICUNKNOWN3 = '\x09\x46\xf0\x04\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+CAP_GENERICUNKNOWN4 = '\x09\x46\xf0\x05\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+CAP_GENERICUNKNOWN5 = '\x97\xb1\x27\x51\x24\x3c\x43\x34\xad\x22\xd6\xab\xf7\x3f\x14\x09'
+# Is a Hiptop device?
+CAP_HIPTOP = '\x09\x46\x13\x23\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Supports ICQ direct connections
+CAP_ICQ_DIRECT = '\x09\x46\x13\x44\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Supports some sort of add-ins/extras?  This seems different than ICQ Xtraz.
+CAP_ADDINS = '\x09\x46\x13\x47\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+# Another games related one.
+CAP_GAMES2 = '\x09\x46\x13\x4a\x4c\x7f\x11\xd1\x22\x82\x44\x45\x53\x54\x00\x00'
+# Supports old style ICQ utf-8.
+CAP_ICQUTF8OLD = '\x2e\x7a\x64\x75\xfa\xdf\x4d\xc8\x88\x6f\xea\x35\x95\xfd\xb6\xdf'
+# Supports ICQ2GO extensions
+CAP_ICQ2GO = '\x56\x3f\xc8\x09\x0b\x6f\x41\xbd\x9f\x79\x42\x26\x09\xdf\xa2\xf3'
+# No idea
+CAP_APINFO = '\xaa\x4a\x32\xb5\xf8\x84\x48\xc6\xa3\xd7\x8c\x50\x97\x19\xfd\x5b'
+# Supports Trillian style encrypted messages
+CAP_TRILLIANCRYPT = '\xf2\xe7\xc7\xf4\xfe\xad\x4d\xfb\xb2\x35\x36\x79\x8b\xdf\x00\x00'
+# Unknown ICQ5 capabilities, probably related to Xtras
+CAP_ICQ5UNKNOWN1 = '\x09\x46\x13\x4c\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00'
+CAP_ICQ5UNKNOWN2 = '\x17\x8c\x2d\x9b\xda\xa5\x45\xbb\x8d\xdb\xf3\xbd\xbd\x53\xa1\x0a'
+CAP_ICQ5UNKNOWN3 = '\x1a\x09\x3c\x6c\xd7\xfd\x4e\xc5\x9d\x51\xa6\x47\x4e\x34\xf5\xa0'
+CAP_ICQ5UNKNOWN4 = '\x67\x36\x15\x15\x61\x2d\x4c\x07\x8f\x3d\xbd\xe6\x40\x8e\xa0\x41'
+CAP_ICQ5UNKNOWN5 = '\xb9\x97\x08\xb5\x3a\x92\x42\x02\xb0\x69\xf1\xe7\x57\xbb\x2e\x17'
+CAP_ICQ5UNKNOWN6 = '\xe3\x62\xc1\xe9\x12\x1a\x4b\x94\xa6\x26\x7a\x74\xde\x24\x27\x0d'
+# Empty capability ... ?
+CAP_EMPTY = '\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00'
 
+# Mappings of capabilities back to identifier strings.
 CAPS = dict( [
     (CAP_ICON, 'icon'),
     (CAP_VOICE, 'voice'),
@@ -3154,97 +3202,33 @@ CAPS = dict( [
     (CAP_CROSS_CHAT, 'cross_chat'),
     (CAP_UTF, 'unicode'),
     (CAP_RTF, 'rtf'),
-
-    # From gaim-1.3.0/src/protocols/oscar/locate.c:
-
-    ('\x09\x46\x00\x00\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'ichat'),
-
-    ('\x09\x46\x00\x01\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'secureim'),
-
-    ('\x09\x46\x01\x00\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'video'),
-
-    # "Live Video" support in Windows AIM 5.5.3501 and newer
-    ('\x09\x46\x01\x01\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'live_video'),
-
-    # "Camera" support in Windows AIM 5.5.3501 and newer
-    ('\x09\x46\x01\x02\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'camera'),
-
-    # In Windows AIM 5.5.3501 and newer
-    ('\x09\x46\x01\x03\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'generecunknown'),
-
-    # In iChatAV (version numbers...?)
-    ('\x09\x46\x01\x05\x4c\x7f\x11\xd1\x82\x22\x44\x45\x45\x53\x54\x00',
-     'ichatav'),
-
-    # Not really sure about this one.  In an email from 26 Sep 2003,
-    # Matthew Sachs suggested that, "this * is probably the capability
-    # for the SMS features."
-    ('\x09\x46\x01\xff\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'sms'),
-
-    ('\x09\x46\xf0\x03\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'generecunknown2'),
-
-    ('\x09\x46\xf0\x04\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'generecunknown3'),
-
-    ('\x09\x46\xf0\x05\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'generecunknown4'),
-
-    ('\x09\x46\x13\x23\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'hiptop'),
-
-    ('\x09\x46\x13\x44\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'icq_direct'),
-
-    ('\x09\x46\x13\x47\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'addins'),
-
-    ('\x09\x46\x13\x4a\x4c\x7f\x11\xd1\x22\x82\x44\x45\x53\x54\x00\x00',
-     'games2'),
-
-    ('\x2e\x7a\x64\x75\xfa\xdf\x4d\xc8\x88\x6f\xea\x35\x95\xfd\xb6\xdf',
-     'icqutf8old'),
-
-    ('\x56\x3f\xc8\x09\x0b\x6f\x41\xbd\x9f\x79\x42\x26\x09\xdf\xa2\xf3',
-     'icq2go'),
-
-    ('\x97\xb1\x27\x51\x24\x3c\x43\x34\xad\x22\xd6\xab\xf7\x3f\x14\x09',
-     'generecunknown5'),
-
-    ('\xaa\x4a\x32\xb5\xf8\x84\x48\xc6\xa3\xd7\x8c\x50\x97\x19\xfd\x5b',
-     'apinfo'),
-
-    ('\xf2\xe7\xc7\xf4\xfe\xad\x4d\xfb\xb2\x35\x36\x79\x8b\xdf\x00\x00',
-     'trilliancrypt'),
-
-    # All of these appear with ICQ5... one of them must mean Xtras
-    ('\x09\x46\x13\x4c\x4c\x7f\x11\xd1\x82\x22\x44\x45\x53\x54\x00\x00',
-     'icq5unknown1'),
-
-    ('\x17\x8c\x2d\x9b\xda\xa5\x45\xbb\x8d\xdb\xf3\xbd\xbd\x53\xa1\x0a',
-     'icq5unknown2'),
-
-    ('\x1a\x09\x3c\x6c\xd7\xfd\x4e\xc5\x9d\x51\xa6\x47\x4e\x34\xf5\xa0',
-     'icq5unknown3'),
-
-    ('\x67\x36\x15\x15\x61\x2d\x4c\x07\x8f\x3d\xbd\xe6\x40\x8e\xa0\x41',
-     'icq5unknown4'),
-
-    ('\xb9\x97\x08\xb5\x3a\x92\x42\x02\xb0\x69\xf1\xe7\x57\xbb\x2e\x17',
-     'icq5unknown5'),
-
-    ("\xe3\x62\xc1\xe9\x12\x1a\x4b\x94\xa6\x26\x7a\x74\xde\x24\x27\x0d",
-     'icq5unknown6'),
-
-    ('\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00',
-     'empty')
+    (CAP_ICHAT, 'ichat'),
+    (CAP_SECUREIM, 'secureim'),
+    (CAP_VIDEO, 'video'),
+    (CAP_LIVE_VIDEO, 'live_video'),
+    (CAP_CAMERA, 'camera'),
+    (CAP_GENERICUNKNOWN1, 'genericunknown1'),
+    (CAP_GENERICUNKNOWN2, 'genericunknown2'),
+    (CAP_GENERICUNKNOWN3, 'genericunknown3'),
+    (CAP_GENERICUNKNOWN4, 'genericunknown4'),
+    (CAP_GENERICUNKNOWN5, 'genericunknown5'),
+    (CAP_ICHATAV, 'ichatav'),
+    (CAP_SMS, 'sms'),
+    (CAP_HIPTOP, 'hiptop'),
+    (CAP_ICQ_DIRECT, 'icq_direct'),
+    (CAP_ADDINS, 'addins'),
+    (CAP_GAMES2, 'games2'),
+    (CAP_ICQUTF8OLD, 'icqutf8old'),
+    (CAP_ICQ2GO, 'icq2go'),
+    (CAP_APINFO, 'apinfo'),
+    (CAP_TRILLIANCRYPT, 'trilliancrypt'),
+    (CAP_ICQ5UNKNOWN1, 'icq5unknown1'),
+    (CAP_ICQ5UNKNOWN2, 'icq5unknown2'),
+    (CAP_ICQ5UNKNOWN3, 'icq5unknown3'),
+    (CAP_ICQ5UNKNOWN4, 'icq5unknown4'),
+    (CAP_ICQ5UNKNOWN5, 'icq5unknown5'),
+    (CAP_ICQ5UNKNOWN6, 'icq5unknown6'),
+    (CAP_EMPTY, 'empty')
     ] )
 
 ###
